[gd_scene load_steps=26 format=3 uid="uid://oj3blpxqf1bl"]

[ext_resource type="Texture2D" uid="uid://cosanfwg57e4y" path="res://Arts/Textures/kenney_prototype_textures/orange/texture_03.png" id="2_v37ox"]
[ext_resource type="Texture2D" uid="uid://c3wt61i40kd0n" path="res://Arts/Textures/kenney_prototype_textures/dark/texture_03.png" id="3_lilqa"]
[ext_resource type="Script" path="res://Scripts/Others/CheckPointManagerScript.gd" id="4_8hsqg"]
[ext_resource type="Script" path="res://Scripts/Others/JumppadScript.gd" id="4_nyumb"]
[ext_resource type="PackedScene" uid="uid://bu2d2l2emtdp" path="res://Scenes/City.blend" id="5_50nlo"]
[ext_resource type="Script" path="res://Scripts/Others/CheckPointScript.gd" id="6_5mgbl"]
[ext_resource type="Script" path="res://Scripts/Others/WaypointScript.gd" id="7_7uesv"]
[ext_resource type="Shader" path="res://Scenes/CheckPoint.gdshader" id="7_m7tga"]
[ext_resource type="Texture2D" uid="uid://llt51oxb8svo" path="res://Arts/Textures/waypoint.svg" id="8_d5jld"]
[ext_resource type="PackedScene" uid="uid://c4bml644dyg7f" path="res://Scenes/MainMenuScene.tscn" id="8_yqton"]
[ext_resource type="PackedScene" uid="uid://cmriwaexowk04" path="res://Scenes/WinMenuScene.tscn" id="9_cio0p"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fjbi6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_iebnq"]
sky_material = SubResource("ProceduralSkyMaterial_fjbi6")

[sub_resource type="Environment" id="Environment_pyxgo"]
background_mode = 2
sky = SubResource("Sky_iebnq")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h3yst"]
albedo_texture = ExtResource("2_v37ox")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_st80m"]
albedo_texture = ExtResource("3_lilqa")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ygjqq"]
albedo_texture = ExtResource("3_lilqa")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_linps"]
albedo_texture = ExtResource("3_lilqa")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rd3mg"]
albedo_color = Color(0.12549, 0.568627, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vm7yl"]
height = 0.15
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ijvsc"]
height = 2.5
radius = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ek82a"]
render_priority = 0
shader = ExtResource("7_m7tga")
shader_parameter/line_width = 0.02
shader_parameter/line_spacing = 0.2
shader_parameter/line_color = Color(1, 0.5, 0, 0.75)
shader_parameter/base_color = Color(0.5, 0.5, 0.5, 0)
shader_parameter/rotation_speed = 0.25
shader_parameter/time_offset = 0.0
shader_parameter/top_normal_threshold = 0.9

[sub_resource type="CylinderMesh" id="CylinderMesh_3us4e"]
material = SubResource("ShaderMaterial_ek82a")
top_radius = 15.0
bottom_radius = 15.0
height = 2.5
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_telvl"]
transparency = 1
albedo_color = Color(1, 1, 0, 0.75)

[sub_resource type="CylinderMesh" id="CylinderMesh_6b2og"]
material = SubResource("StandardMaterial3D_telvl")
height = 20.0

[node name="TemplateMap" type="Node3D"]

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_pyxgo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="PlayerCharacter" type="Node3D" parent="."]

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, -1.5, 0)

[node name="WalkableWalls" type="Node3D" parent="Map"]

[node name="WalkableWall" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.9267, 3.94576, 122.859)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(45, 8, 0)

[node name="WalkableWall4" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -225.574, 3.94576, 122.859)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(55.356, 8, 0)

[node name="WalkableWall6" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -142.052, 3.94576, 122.859)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(52.9949, 8, 0)

[node name="WalkableWall5" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -183.596, 3.94576, 110.841)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(57.5216, 8, 0)

[node name="WalkableWall3" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -79.9646, 3.94576, 122.859)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(24, 8, 0)

[node name="WalkableWall2" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -61.4088, 3.94576, 116.746)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(24, 8, 0)

[node name="WalkableWall7" type="CSGBox3D" parent="Map/WalkableWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -103.134, 3.94576, 114.059)
material_override = SubResource("StandardMaterial3D_h3yst")
use_collision = true
collision_layer = 5
collision_mask = 2
size = Vector3(34.8449, 8, 0)

[node name="Blocks" type="Node3D" parent="Map"]

[node name="CSGBox3D" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -128.598, -0.137161, 23.0408)
use_collision = true
collision_mask = 2
size = Vector3(260, 1, 210)
material = SubResource("StandardMaterial3D_st80m")

[node name="CSGBox3D12" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(0.999956, -0.00940719, 0, 0.00940719, 0.999956, 0, 0, 0, 1, -2.09055, 4.20324, 0.864672)
use_collision = true
collision_mask = 2
size = Vector3(0.001, 8, 120.154)
material = SubResource("StandardMaterial3D_st80m")

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(-4.37114e-08, 0.642788, 0.766044, 0, 0.766044, -0.642788, -1, -2.80971e-08, -3.34849e-08, -163.619, 21.5158, -67.1354)
material_override = SubResource("StandardMaterial3D_ygjqq")
use_collision = true
collision_mask = 2
size = Vector3(14, 1, 70)

[node name="CSGBox3D4" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(-4.37114e-08, 0.5, 0.866025, 0, 0.866025, -0.5, -1, -2.18557e-08, -3.78552e-08, -130.606, 23.5035, -4.44917)
material_override = SubResource("StandardMaterial3D_ygjqq")
use_collision = true
collision_mask = 2
size = Vector3(14, 1, 140)

[node name="CSGBox3D3" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -215.145, 43.895, -60.14)
material_override = SubResource("StandardMaterial3D_ygjqq")
use_collision = true
collision_mask = 2
size = Vector3(50, 1, 28)

[node name="CSGBox3D5" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -215.97, 58.44, -11.413)
material_override = SubResource("StandardMaterial3D_ygjqq")
use_collision = true
collision_mask = 2
size = Vector3(50, 1, 28)

[node name="CSGBox3D6" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -214.465, 19.9437, 1.90478)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(25, 1, 35.7637)

[node name="CSGBox3D10" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -162.839, 24.2194, 60.1357)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(35.1389, 1, 19.9894)

[node name="CSGBox3D11" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -102.932, 24.2194, 60.1357)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(35.1389, 1, 19.9894)

[node name="CSGBox3D13" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -153.816, 2.3, -14.332)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(16.975, 0.5, 16.558)

[node name="CSGBox3D7" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -214.465, 19.9437, -76.0135)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(25, 1, 37.7349)

[node name="CSGBox3D8" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -185.348, 24.7802, -102.014)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(24.9877, 1, 25.8487)

[node name="CSGBox3D9" type="CSGBox3D" parent="Map/Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -153.529, 29.0835, -102.014)
material_override = SubResource("StandardMaterial3D_linps")
use_collision = true
collision_mask = 2
size = Vector3(24.9877, 1, 25.8487)

[node name="Jumppads" type="Node3D" parent="Map"]

[node name="Jumppad" type="CSGCylinder3D" parent="Map/Jumppads"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7055, 0.513623, 83.194)
material_override = SubResource("StandardMaterial3D_rd3mg")
use_collision = true
collision_layer = 9
collision_mask = 2
radius = 2.0
height = 0.15
script = ExtResource("4_nyumb")
jumpBoostValue = 22.0

[node name="Area3D" type="Area3D" parent="Map/Jumppads/Jumppad"]
collision_layer = 9
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Jumppads/Jumppad/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0425774, 0)
shape = SubResource("CylinderShape3D_vm7yl")

[node name="Jumppad3" type="CSGCylinder3D" parent="Map/Jumppads"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -220.88, 44.4149, -62.1605)
material_override = SubResource("StandardMaterial3D_rd3mg")
use_collision = true
collision_layer = 9
collision_mask = 2
radius = 2.0
height = 0.15
script = ExtResource("4_nyumb")
jumpBoostValue = 29.0

[node name="Area3D" type="Area3D" parent="Map/Jumppads/Jumppad3"]
collision_layer = 9
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Jumppads/Jumppad3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0425774, 0)
shape = SubResource("CylinderShape3D_vm7yl")

[node name="Jumppad2" type="CSGCylinder3D" parent="Map/Jumppads"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -203.661, 0.513623, 61.1653)
material_override = SubResource("StandardMaterial3D_rd3mg")
use_collision = true
collision_layer = 9
collision_mask = 2
radius = 2.0
height = 0.15
script = ExtResource("4_nyumb")
jumpBoostValue = 34.0

[node name="Area3D" type="Area3D" parent="Map/Jumppads/Jumppad2"]
collision_layer = 9
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Jumppads/Jumppad2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0425774, 0)
shape = SubResource("CylinderShape3D_vm7yl")

[node name="Jumppad4" type="CSGCylinder3D" parent="Map/Jumppads"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -77.5403, 0.513623, -65.0266)
material_override = SubResource("StandardMaterial3D_rd3mg")
use_collision = true
collision_layer = 9
collision_mask = 2
radius = 2.0
height = 0.15
script = ExtResource("4_nyumb")
jumpBoostValue = 34.0

[node name="Area3D" type="Area3D" parent="Map/Jumppads/Jumppad4"]
collision_layer = 9
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Jumppads/Jumppad4/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0425774, 0)
shape = SubResource("CylinderShape3D_vm7yl")

[node name="CheckPoints" type="Node3D" parent="Map"]
script = ExtResource("4_8hsqg")

[node name="StartCheckPoint" type="Area3D" parent="Map/CheckPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 1.5, 0)
collision_layer = 16
collision_mask = 2
script = ExtResource("6_5mgbl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CheckPoints/StartCheckPoint"]
shape = SubResource("CylinderShape3D_ijvsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CheckPoints/StartCheckPoint"]
mesh = SubResource("CylinderMesh_3us4e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/CheckPoints/StartCheckPoint"]
mesh = SubResource("CylinderMesh_6b2og")

[node name="WaypointAnchor" type="Marker3D" parent="Map/CheckPoints/StartCheckPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="Control" type="Control" parent="Map/CheckPoints/StartCheckPoint/WaypointAnchor"]
modulate = Color(1, 0.5, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_7uesv")
text = "OBJECTIVE"

[node name="Label" type="Label" parent="Map/CheckPoints/StartCheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -17.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "WAYPOINT"
horizontal_alignment = 1

[node name="Marker" type="TextureRect" parent="Map/CheckPoints/StartCheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -8.0
offset_top = -16.0
offset_right = 120.0
offset_bottom = 112.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_d5jld")

[node name="CheckPoint" type="Area3D" parent="Map/CheckPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -63.8593, 1.59992, 0)
collision_layer = 16
collision_mask = 2
script = ExtResource("6_5mgbl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CheckPoints/CheckPoint"]
shape = SubResource("CylinderShape3D_ijvsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CheckPoints/CheckPoint"]
mesh = SubResource("CylinderMesh_3us4e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/CheckPoints/CheckPoint"]
mesh = SubResource("CylinderMesh_6b2og")

[node name="WaypointAnchor" type="Marker3D" parent="Map/CheckPoints/CheckPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="Control" type="Control" parent="Map/CheckPoints/CheckPoint/WaypointAnchor"]
modulate = Color(1, 0.5, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_7uesv")
text = "OBJECTIVE"

[node name="Label" type="Label" parent="Map/CheckPoints/CheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -17.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "WAYPOINT"
horizontal_alignment = 1

[node name="Marker" type="TextureRect" parent="Map/CheckPoints/CheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -8.0
offset_top = -16.0
offset_right = 120.0
offset_bottom = 112.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_d5jld")

[node name="CheckPoint2" type="Area3D" parent="Map/CheckPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -442.317, 44.85, 0)
collision_layer = 16
collision_mask = 2
script = ExtResource("6_5mgbl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CheckPoints/CheckPoint2"]
shape = SubResource("CylinderShape3D_ijvsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CheckPoints/CheckPoint2"]
mesh = SubResource("CylinderMesh_3us4e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/CheckPoints/CheckPoint2"]
mesh = SubResource("CylinderMesh_6b2og")

[node name="WaypointAnchor" type="Marker3D" parent="Map/CheckPoints/CheckPoint2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="Control" type="Control" parent="Map/CheckPoints/CheckPoint2/WaypointAnchor"]
modulate = Color(1, 0.5, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_7uesv")
text = "OBJECTIVE"

[node name="Label" type="Label" parent="Map/CheckPoints/CheckPoint2/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -17.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "WAYPOINT"
horizontal_alignment = 1

[node name="Marker" type="TextureRect" parent="Map/CheckPoints/CheckPoint2/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -8.0
offset_top = -16.0
offset_right = 120.0
offset_bottom = 112.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_d5jld")

[node name="FinishCheckPoint" type="Area3D" parent="Map/CheckPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -640.733, 111.256, 0)
collision_layer = 16
collision_mask = 2
script = ExtResource("6_5mgbl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CheckPoints/FinishCheckPoint"]
shape = SubResource("CylinderShape3D_ijvsc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/CheckPoints/FinishCheckPoint"]
mesh = SubResource("CylinderMesh_3us4e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/CheckPoints/FinishCheckPoint"]
mesh = SubResource("CylinderMesh_6b2og")

[node name="WaypointAnchor" type="Marker3D" parent="Map/CheckPoints/FinishCheckPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)

[node name="Control" type="Control" parent="Map/CheckPoints/FinishCheckPoint/WaypointAnchor"]
modulate = Color(1, 0.5, 0, 1)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_7uesv")
text = "OBJECTIVE"

[node name="Label" type="Label" parent="Map/CheckPoints/FinishCheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -17.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "WAYPOINT"
horizontal_alignment = 1

[node name="Marker" type="TextureRect" parent="Map/CheckPoints/FinishCheckPoint/WaypointAnchor/Control"]
layout_mode = 0
offset_left = -8.0
offset_top = -16.0
offset_right = 120.0
offset_bottom = 112.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_d5jld")

[node name="City" parent="Map" instance=ExtResource("5_50nlo")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -317.684, 0, 0)

[node name="Camera" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Camera"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 75, 0)

[node name="MainMenu" parent="Camera/Camera3D" instance=ExtResource("8_yqton")]

[node name="WinMenu" parent="Camera/Camera3D" node_paths=PackedStringArray("mainMenu") instance=ExtResource("9_cio0p")]
mainMenu = NodePath("../MainMenu")

[connection signal="area_entered" from="Map/Jumppads/Jumppad/Area3D" to="Map/Jumppads/Jumppad" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Map/Jumppads/Jumppad3/Area3D" to="Map/Jumppads/Jumppad3" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Map/Jumppads/Jumppad2/Area3D" to="Map/Jumppads/Jumppad2" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Map/Jumppads/Jumppad4/Area3D" to="Map/Jumppads/Jumppad4" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Map/CheckPoints/StartCheckPoint" to="Map/CheckPoints/StartCheckPoint" method="_on_area_entered"]
[connection signal="area_entered" from="Map/CheckPoints/CheckPoint" to="Map/CheckPoints/CheckPoint" method="_on_area_entered"]
[connection signal="area_entered" from="Map/CheckPoints/CheckPoint2" to="Map/CheckPoints/CheckPoint2" method="_on_area_entered"]
[connection signal="area_entered" from="Map/CheckPoints/FinishCheckPoint" to="Map/CheckPoints/FinishCheckPoint" method="_on_area_entered"]
[connection signal="win" from="Map/CheckPoints/FinishCheckPoint" to="Camera/Camera3D/WinMenu" method="_on_finish_check_point_win"]
